# cmd/api/middleware.go
@@ -9,7 +9,13 @@ import (
 	"strings"
 
 	"github.com/golang-jwt/jwt/v5"
+	db "github.com/trenchesdeveloper/social-blue/internal/db/sqlc"
 )
+
+type UserWithRole struct {
+	db.GetUserByIDRow
+	RoleLevel int `json:"role_level"`
+}
 
 func (s *server) BasicAuthMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
@@ -94,7 +100,67 @@ func (s *server) AuthMiddleware(next http.Handler) http.Handler {
 			s.unauthorizedError(w, r, err)
 			return
 		}
-		ctx = context.WithValue(ctx, userKey, user)
+		// get the role level of the user
+		role, err := s.store.GetRoleByID(ctx, user.RoleID)
+		if err != nil {
+			s.internalServerError(w, r, err)
+			return
+		}
+		ctx = context.WithValue(ctx, userKey, UserWithRole{
+			GetUserByIDRow: user,
+			RoleLevel:      int(role.Level),
+		})
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
+}
+
+
+func (s *server) checkPostOwnership(role string) func(http.Handler) http.Handler {
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			ctx := r.Context()
+			post, err := s.getPostFromCtx(ctx)
+			if err != nil {
+				s.internalServerError(w, r, err)
+				return
+			}
+
+			user, err := s.getUserFromContext(ctx)
+			if err != nil {
+				s.internalServerError(w, r, err)
+				return
+			}
+
+			if post.UserID == user.ID {
+				next.ServeHTTP(w, r)
+				return
+			}
+
+			// check role precedence
+			allowed, err := s.checkRolePrecedence(ctx, role, user)
+
+			if err != nil {
+				s.internalServerError(w, r, err)
+				return
+			}
+
+			if !allowed {
+				s.forbiddenError(w, r, fmt.Errorf("user does not have the required role"))
+				return
+			}
+
+			next.ServeHTTP(w, r)
+		})
+	}
+}
+
+func (s *server) checkRolePrecedence(ctx context.Context, role string, user UserWithRole) (bool, error) {
+	// get the role of the user
+	userRole, err := s.store.GetRoleByName(ctx, role)
+
+	if err != nil {
+		return false, err
+	}
+
+	return user.RoleLevel >= int(userRole.Level), nil
 }
