# docs/swagger.json
@@ -343,7 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponseDto"
+                            "$ref": "#/definitions/main.UserWithRole"
                         }
                     },
                     "400": {
@@ -387,7 +387,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/db.GetUserByIDRow"
+                            "$ref": "#/definitions/main.UserWithRole"
                         }
                     },
                     "400": {
@@ -465,41 +465,6 @@
                 }
             }
         },
-        "db.GetUserByIDRow": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_active": {
-                    "type": "boolean"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "db.UpdatePostRow": {
             "type": "object",
             "properties": {
@@ -558,6 +523,9 @@
                     "items": {
                         "type": "integer"
                     }
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
@@ -694,9 +662,15 @@
                 }
             }
         },
-        "dto.UserResponseDto": {
+        "main.UserWithRole": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -706,7 +680,34 @@
                 "id": {
                     "type": "integer"
                 },
+                "id_2": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "last_name": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "role_id": {
+                    "type": "integer"
+                },
+                "role_level": {
+                    "type": "integer"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "username": {
@@ -731,6 +732,9 @@
                 },
                 "last_name": {
                     "type": "string"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "token": {
                     "type": "string"
